[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "embedded-no-alloc"
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
bech32 = { path="../", default-features = false, features = ["arrayvec"] }

[[bin]]
name = "embedded-no-alloc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
